# superset

./: .gitignore  CLAUDE.md  Makefile  README.md  migrations_app.py  package-lock.json  package.json  playwright.config.ts  policy.yaml  requirements.txt
.claude/: settings.json
.claude/commands/: implement.md  plan.md  ship.md  verify.md
.continue/: config.yaml
.continue/rules/: architecture.md  ci-gates.md  coding-standards.md  data-contracts.md  migrations-source-of-truth.md  no-controllers.md  odoo-first.md  rls-required.md  security.md
.github/workflows/: ci.yml  deploy-control-room.yml  deploy-databricks.yml  deploy.yml  export-dashboards.yml  image-build-scan.yml  load-examples.yml  smart-delta-engine.yml  (+2 more)
docs/: DASHBOARD_IMPORT.md  DEPLOYMENT_FLOW.md  DOCS_GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  MIGRATIONS.md  N8N_INTEGRATION.md  QUICK_REFERENCE.md  README.md  VERIFY_REPO_STATE.md  architecture.md  data-dictionary.md  runbooks.md  skills-agent-guide.md
mappings/: cookbook_to_hybrid.yaml
playwright/: smoke.spec.ts
playwright-report/: index.html
scripts/: apply_cookbook_mappings.py  bootstrap_examples_db.sh  dab_deploy.sh  db_sync.sh  deploy_env.sh  dev_up.sh  discover_viz_types.py  end_to_end_proof.sh  export_runtime.sh  get_image_digest.sh  get_superset_version.sh  health_check.sh  import_dashboard.py  load_official_samples.sh  manage_migrations.sh  require_env.sh  run_notion_sync.sh  spec_validate.sh  validate.sh
services/notion-sync/: .env.example  README.md  pyproject.toml
services/notion-sync/notion_sync/: __init__.py  client.py  config.py  main.py  models.py  sync.py
services/notion-sync/tests/: __init__.py  test_client.py
(+171 files in other folders)
